MCA-1733 implementing the API route "create session result node"
