# src/controllers/session-results/types/CreateSessionResultRawInput.ts
@@ -1,0 +1,10 @@
+export type CreateSessionResultRawInput = {
+    position: unknown
+    race_number: unknown
+    driver_name: unknown
+    team_name: unknown
+    race_time: unknown
+    laps: unknown
+    status: unknown
+    points: unknown
+}
