# src/models/session-results/types/SessionResultNode.ts
@@ -1,0 +1,15 @@
+export type SessionResultNode = {
+    id: number
+
+    position: number
+    race_number: string | null
+    driver_name: string
+    team_name: string | null
+    race_time: string | null
+    laps: number | null
+    status: string | null
+    points: number | null
+
+    created_at: string
+    updated_at: string
+}
